<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="label_upcoming_elections">Upcoming Elections</string>
    <string name="label_find_representatives">Find my Representatives</string>
    <string name="label_saved_elections">Saved Elections</string>
    <string name="label_election_information">Election Information</string>
    <string name="label_voting_locations">Voting Locations</string>
    <string name="label_ballot_information">Ballot Information</string>
    <string name="label_corresponding_address">Corresponding Address</string>
    <string name="label_follow_election">Follow Election</string>
    <string name="label_unfollow_election">Unfollow Election</string>
    <string name="label_representative_search">Representative Search</string>
    <string name="label_address_line_1">Address Line 1</string>
    <string name="label_address_line_2">Address Line 2</string>
    <string name="label_city">City</string>
    <string name="label_zip">Zip</string>
    <string name="label_find_my_representatives">Find My Representatives</string>
    <string name="label_use_my_location">Use my location</string>
    <string name="label_my_representatives">My Representatives</string>
    <string name="err_enter_address_1">Please enter address 1</string>
    <string name="err_enter_city">Please enter city</string>
    <string name="err_enter_zip">Please enter zip</string>
    <string name="err_failed_rep_data">Failed to load representative data</string>
    <string name="err_fetch_location">Failed to fetch device location</string>
    <string name="err_gps_permission">The permission is required to use this feature</string>
    <string name="err_devices">Please checker whether the device GPS is on or not</string>
</resources>
