<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- DONE: Add data binding node -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- DONE: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/motion_description">

        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            style="@style/TextAppearance.Heading.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- DONE: Add data binding value -->
        <!-- DONE: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/label_address_line_1"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title"
            style="@style/TextAppearance.Subtitle.Dark"/>

        <!-- DONE: Add data binding value -->
        <!-- DONE: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            style="@style/TextAppearance.Subtitle.Dark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/no_size"
            android:autofillHints="postalAddress"
            android:hint="@string/label_address_line_2"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- DONE: Add data binding value -->
        <!-- DONE: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            style="@style/TextAppearance.Subtitle.Dark"
            android:layout_width="@dimen/no_size"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/label_city"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- DONE: Add default values from provided resources  -->
        <!-- DONE: Add data binding value -->
        <!-- DONE: Add visual styling and content -->
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/state"
            android:layout_width="@dimen/no_size"
            android:layout_height="@dimen/no_size"
            android:autofillHints="postalAddress"
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            android:selectedItemPosition="@={viewModel.selectedItem}"
            app:stateValue="@{viewModel.state}" />

        <!-- DONE: Add data binding value -->
        <!-- DONE: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            style="@style/TextAppearance.Subtitle.Dark"
            android:layout_width="@dimen/no_size"
            android:layout_height="wrap_content"
            android:autofillHints="postalCode"
            android:hint="@string/label_zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <!-- DONE: Add visual styling and label -->
        <Button
            android:id="@+id/button_search"
            style="@style/TextAppearance.AppCompat.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_find_my_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <!-- DONE: Add visual styling and content -->
        <Button
            android:id="@+id/button_location"
            style="@style/TextAppearance.AppCompat.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location"
            style="@style/TextAppearance.Heading.Dark" />

        <!-- DONE: Add Representatives RecyclerView -->
        <!-- DONE: Add visual styling and content -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativeList"
            android:layout_width="match_parent"
            android:layout_height="@dimen/no_size"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="visible"
            app:representativeListData="@{viewModel.representativeList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            motion:visibilityMode="ignore"
            motion:listitem="@layout/viewholder_representative"/>

        <ProgressBar
            android:id="@+id/status_loading_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:loaderState="@{viewModel.loaderState}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>