<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- DONE: Add data binding node for Voter Info ViewModel -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:title="@{viewModel.voterInfoLiveData.election.name}"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- DONE: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:dateText="@{viewModel.voterInfoLiveData.election.electionDay}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_election_information"
            android:layout_marginTop="@dimen/medium_margin"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:shouldShowView="@{viewModel.voterInfoLiveData.state}"
            style="@style/TextAppearance.Title.Dark"/>

        <!-- DONE: Add click binding to open web URL -->
        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_voting_locations"
            android:onClick="@{()-> viewModel.loadInfoUrl(viewModel.voterInfoLiveData.state.get(0).electionAdministrationBody.votingLocationFinderUrl)}"
            app:shouldShowView="@{viewModel.voterInfoLiveData.state.get(0).electionAdministrationBody.votingLocationFinderUrl}"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- DONE: Add click binding to open web URL -->
        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ballot_information"
            android:onClick="@{()-> viewModel.loadInfoUrl(viewModel.voterInfoLiveData.state.get(0).electionAdministrationBody.ballotInfoUrl)}"
            app:shouldShowView="@{viewModel.voterInfoLiveData.state.get(0).electionAdministrationBody.ballotInfoUrl}"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_corresponding_address"
            app:shouldShowView="@{viewModel.voterInfoLiveData.state.get(0).electionAdministrationBody.correspondenceAddress}"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- DONE: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.voterInfoLiveData.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- DONE: Add button to save election to Room -->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/actionFollow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:onClick="@{() -> (viewModel.onFollowCtaAction(viewModel.voterInfoLiveData.election))}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/status_loading_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:loaderState="@{viewModel.state}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>